# hoardman

./: .gitignore  README.md  cli.py  dbserver.py  httpclient.py  jobclient.py  jobqueue.py  mangadex.py  persistence.py  pyproject.toml  tables.sql
migrations/: latest_schema.sql  m0001.py  m0002.py
